# MediaCurator

./: BACKLOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: Packaging.cmake
docs/: RELEASING.md
include/core/: DatabaseManager.h  DriveActivityMonitor.h  ExternalTools.h  LibraryLoader.h  StorageGroupSettings.h  UpdateChecker.h  UserProfile.h
include/engine/: ActionEngine.h  HighscoreClient.h  JobQueue.h  OpenSubtitlesClient.h  PosterManager.h  RemuxJob.h  SubtitleManager.h  SubtitleSyncMatcher.h  TrackDecision.h  TrackFlagService.h
include/scanner/: FfprobeScanner.h  NfoParser.h  ScanWorker.h  SubtitleLanguageDetector.h
include/ui/: ImdbSearchDialog.h  McCardDelegate.h  McDriveActivityIndicator.h  McFileCardDelegate.h  McFileListModel.h  McFilterPanel.h  McFlagRowWidget.h  McGbGoalDialog.h  McGoalProgressBar.h  McHighscoreDialog.h  McJobCardDelegate.h  McJobListModel.h  McJobPanel.h  McJobStatsBar.h  McLanguageFlags.h  McMainWindow.h  McOnboardingDialog.h  McPreviewDialog.h  McSettingsDialog.h  McSubtitleDownloadDialog.h  McTrackContextMenu.h  McWindowGeometry.h  RangeSlider.h
resources/linux/: mediacurator.desktop
scripts/: export_icon.ps1  setup_tools.ps1  setup_tools.sh
src/: CMakeLists.txt  main.cpp
src/core/: AppSettings.cpp  DatabaseManager.cpp  DriveActivityMonitor.cpp  ExternalTools.cpp  LibraryLoader.cpp  StorageGroupSettings.cpp  UpdateChecker.cpp  UserProfile.cpp
src/engine/: ActionEngine.cpp  AnalyzeWorker.cpp  HighscoreClient.cpp  JobQueue.cpp  OpenSubtitlesClient.cpp  PosterManager.cpp  RemuxJob.cpp  RuleEngine.cpp  SubtitleManager.cpp  SubtitleSyncMatcher.cpp  TrackFlagService.cpp
src/scanner/: FfprobeScanner.cpp  NfoParser.cpp  OriginalLanguageDetector.cpp  ScanWorker.cpp  SubtitleLanguageDetector.cpp
src/ui/: ImdbSearchDialog.cpp  McBulkSummaryDialog.cpp  McCalibrationDialog.cpp  McCardDelegate.cpp  McDriveActivityIndicator.cpp  McFileListModel.cpp  McFilterPanel.cpp  McGbGoalDialog.cpp  McGoalProgressBar.cpp  McHighscoreDialog.cpp  McJobListModel.cpp  McJobPanel.cpp  McJobReviewDialog.cpp  McJobStatsBar.cpp  McLanguageFlags.cpp  McLegendDialog.cpp  McMainWindow.cpp  McManageFoldersDialog.cpp  McOnboardingDialog.cpp  McPreviewDialog.cpp  McSettingsDialog.cpp  McSubtitleDownloadDialog.cpp  McTrackContextMenu.cpp  McTrackTableModel.cpp  McWhatIfDialog.cpp  McWindowGeometry.cpp  RangeSlider.cpp
